# mcp-brasil

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TECH_DEBT.md  TOOLS.md  cliff.toml  pyproject.toml
.claude/skills/release/: SKILL.md
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/guide/: quickstart.md  using-in-projects.md
plan/: plan-tse-resultados.md
scripts/: release.sh
src/mcp_brasil/: __init__.py
src/mcp_brasil/data/anuncios_eleitorais/: tools.py
src/mcp_brasil/data/compras/: __init__.py  server.py
src/mcp_brasil/data/compras/contratosgovbr/: client.py  tools.py
src/mcp_brasil/data/compras/pncp/: __init__.py  client.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/diario_oficial/: __init__.py  client.py  client_dou.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py  tools_dou.py
src/mcp_brasil/data/farmacia_popular/: server.py  tools.py
src/mcp_brasil/data/forum_seguranca/: __init__.py  client.py  constants.py  resources.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/imunizacao/: client.py  constants.py  tools.py
src/mcp_brasil/data/inpe/: tools.py
src/mcp_brasil/data/opendatasus/: client.py  tools.py
src/mcp_brasil/data/saude/: __init__.py  client.py  constants.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/tce_es/: __init__.py  client.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/tce_pi/: __init__.py  client.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/tce_rn/: __init__.py  client.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/tcu/: client.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/tse/: client.py  constants.py  schemas.py  server.py  tools.py
src/mcp_brasil/datajud/: __init__.py  client.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/mcp_brasil/jurisprudencia/: __init__.py  client.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/mcp_brasil/transparencia/: constants.py  tools.py
src/mcp_brasil/tse/: __init__.py  client.py  constants.py  prompts.py  resources.py  schemas.py  server.py  tools.py
tests/: SHOWCASE.md  test_showcase.py
tests/data/compras/contratosgovbr/: test_client.py  test_integration.py  test_tools.py
tests/data/compras/pncp/: test_client.py  test_integration.py  test_tools.py
tests/data/diario_oficial/: test_client.py  test_client_dou.py  test_integration.py  test_tools.py  test_tools_dou.py
tests/data/farmacia_popular/: test_integration.py  test_tools.py
tests/data/forum_seguranca/: test_client.py  test_integration.py  test_tools.py
tests/data/saude/: test_client.py  test_integration.py  test_tools.py
tests/data/tce_es/: test_client.py  test_integration.py  test_tools.py
tests/data/tce_pi/: test_client.py  test_integration.py  test_tools.py
tests/data/tce_rn/: test_client.py  test_integration.py  test_tools.py
tests/data/tcu/: test_tools.py
tests/data/tse/: test_client.py  test_integration.py  test_tools.py
tests/datajud/: test_client.py  test_integration.py  test_tools.py
tests/ibge/: test_client.py  test_integration.py  test_tools.py
tests/jurisprudencia/: test_client.py  test_integration.py  test_tools.py
tests/transparencia/: test_tools.py
tests/tse/: test_client.py  test_integration.py  test_tools.py
